inquirybuilder/force-app/main/default/objects/CSA_Answer_Definition__c/fields/Next_Element_RecordType__c.field-meta.xml
<CustomField>
    <fullName>Next_Element_RecordType__c</fullName>
    <formula>Next_Element__r.RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Next Element RecordType</label>
    <type>Text</type>
</CustomField>