inquirybuilder/force-app/main/default/objects/CSA_Answer_Definition__c/fields/Question_Definition__c.field-meta.xml
<CustomField>
    <fullName>Question_Definition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Question Definition</label>
    <referenceTo>CSA_Question_Definition__c</referenceTo>
    <relationshipLabel>Answer Definitions</relationshipLabel>
    <relationshipName>Answer_Definitions</relationshipName>
    <type>Lookup</type>
</CustomField>