inquirybuilder/force-app/main/default/objects/CSA_Answer_Definition__c/fields/Question_Name__c.field-meta.xml
<CustomField>
    <fullName>Question_Name__c</fullName>
    <formula>Question_Definition__r.Question__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Question Name</label>
    <type>Text</type>
</CustomField>