inquirybuilder/force-app/main/default/objects/CSA_Answer_Definition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Next_Element__c</columns>
    <columns>Question_Definition__c</columns>
    <columns>Sequence_Number__c</columns>
    <columns>Value__c</columns>
    <columns>Information__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>